# optical-pos

./: .gitignore  .output.txt  Procfile  README.md  VENDOR_DISTRIBUTION.md  build_and_package.py  build_native_apps.py  build_output.txt  build_production.py  data.json  demo_data.json  expenses_My_Shared_Expenses.csv  flet_gui.py  gui.py  license_admin.py  main.py  pip_list.txt  pyproject.toml  render.yaml  requirements.txt  run_web.py  supabase_full_schema.sql  supabase_licensing_schema.sql  supabase_schema.sql  web_app.py
.github/workflows/: deploy.yml
app/: config.py  flet_compat.py  logging_config.py
app/core/: auth.py  i18n.py  inventory_service.py  licensing.py  permissions.py  state.py
app/data/: supabase_repository.py
app/database/: db_manager.py  models.py  repository.py  supabase_schema.sql
app/ui/: colors.py  customer_dialog.py  customer_lookup_dialog.py  customer_window.py  dashboard.py  history_window.py  inventory_window.py  invoice_detail_dialog.py  lab_window.py  login_window.py  (+13 more)
scripts/: cleanup_lenses.py  ensure_sample_sale.py  init_db.py  migrate_add_contact_lens_table.py  reset_and_seed.py  test_auth.py  test_lab_window.py  test_permission.py  test_product_dialog.py  test_product_dialog_full.py  test_product_dialog_suppliers.py  test_product_qty_behaviour.py  test_signals_lab.py  verify_pos_logic.py  verify_ui_data.py
static/: manifest.json  sw.js
templates/: customer_detail.html  customers.html  dashboard.html  inventory.html  lab.html  layout.html  login.html  sales.html
tests/: test_balance_calculator.py  test_persistence.py
(+14 files in other folders)
